# finsight

./: package.json
finsight-ui/: vite.config.ts
finsight-ui/src/: AddAsset.tsx  App.scss  Nav.tsx
finsight-ui/src-tauri/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
