[package]
name = "finaro-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde_json = "1"
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
stronghold = "0.2.1"
rust-argon2 = "2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
